<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info_pessoais"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/menu_informacoes_pessoais" />
        <item
            android:id="@+id/nav_formacao"
            android:icon="@drawable/ic_formacao"
            android:title="@string/menu_formacao" />
        <item
            android:id="@+id/nav_experiencia"
            android:icon="@drawable/ic_exp_prof"
            android:title="@string/menu_experiencia" />
        <item
            android:id="@+id/nav_cursos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_cursos" />
        <item
            android:id="@+id/nav_publicacoes"
            android:icon="@drawable/ic_publicacoes"
            android:title="@string/menu_publicacoes" />

    </group>
</menu>